ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
02/21/2019 Oleh Derevenko
        * Dynamic step count adjustment was implemented for dWorldQuickStep
          with dWorldSetQuickStepDynamicIterationParameters and 
          dWorldGetQuickStepDynamicIterationParameters new API functions
          to control the feature.
          The solver estimates per body resulting contact force maximal 
          absolute adjustment value and may exit after fewer iterations if
          the adjustments get smaller than the given threshold, or iterate 
          longer if the adjustments are still significant after the default
          iteration count is executed.

01/20/2019 Oleh Derevenko
        * x86 targets have been changed to generate SSE2 code for calculations
          by default with possibility to explicitly configure back for FPU.

11/12/2018 Oleh Derevenko
        * The commentary from 11/05/2018 was wrong. The constraints were not
          reset to their natural order and remained randomized.
          The other thing that was missing was full contraint reorder without 
          separation into independent and dependent ones. The algorithm doesn't
          converge without it well.

11/10/2018 Oleh Derevenko
        * An incorrect optimization to Jacobian Copy building code from #1938
          that resulted in corrupt data in multi-threaded execution mode was 
          fixed.

11/05/2018 Oleh Derevenko
        * An unintended change from commit #1898 has been reverted.
          The QuickStep used to solve with randomized constraint order 
          each 8th iteration. The other iterations, the constraints 